fix(offres): comparator reservation