@@ -7,10 +7,11 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 
 import java.time.LocalDate;
-import java.time.temporal.ChronoUnit;
-import java.util.*;
+import java.util.Arrays;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
 @Service
@@ -41,33 +42,15 @@ public class OffreService {
                 .flatMap(Arrays::stream)
                 .collect(Collectors.toList());
 
-        // Regrouper les offres par chambre d'hôtel
-        Map<String, List<Offre>> groupedOffres = offres.stream()
-                .collect(Collectors.groupingBy(offre -> offre.hotel().id() + "-" + offre.chambre().numero()));
-
-        // Trouver les offres les moins chères pour chaque groupe
-        List<Offre> offresMoinsCheres = groupedOffres.values().stream()
-                .flatMap(listeOffres -> {
-                    Offre offreMoinsChere = listeOffres.stream()
-                            .min(Comparator.comparing(Offre::prixSejour))
-                            .orElse(null);
-
-                    if (offreMoinsChere == null) {
-                        return Stream.empty();
-                    }
-
-                    float prixMinimum = offreMoinsChere.prixSejour();
-                    return listeOffres.stream()
-                            .filter(offre -> offre.prixSejour() == prixMinimum);
-                })
-                .collect(Collectors.toList());
+        var offresMap = offres.stream()
+                .collect(Collectors.groupingBy(Offre::chambre))
+                .values()
+                .stream()
+                .map(offreList -> offreList.stream().min(Comparator.comparingDouble(Offre::prixSejour)).get())
+                .sorted(Comparator.comparingDouble(Offre::prixSejour))
+                .toList();
 
         // Trier les offres finales par prix par nuit
-        return offresMoinsCheres.stream()
-                .sorted(Comparator.comparing(offre -> {
-                    long nbNuits = ChronoUnit.DAYS.between(debut, fin);
-                    return offre.prixSejour() / nbNuits;
-                }))
-                .collect(Collectors.toList());
+        return offresMap;
     }
 }
